--- a/cotizador/index.html
+++ b/cotizador/index.html
@@ -1,10 +1,10 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/src/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Cotizador Formularios y context  </title>
+    <title>Cotizador Formularios y Context</title>
   </head>
   <body class="bg-gradient-to-r from-indigo-500 to-indigo-800">
     <div id="root"></div>
